# cpp_demo

./: .gitignore  CMakeLists.txt  README.md
cpp-primer-plus/data/: tobuy.txt
cpp-primer-plus/exercise/chapter-10/: 10-1.cpp  BankAccount.cpp  BankAccount.h
cpp-primer-plus/exercise/chapter-12/: 12-1.cpp  Cow.cpp  Cow.h
cpp-primer-plus/exercise/chapter-2/: 1.cpp  2.cpp  3.cpp
cpp-primer-plus/exercise/chapter-3/: 3-1.cpp
cpp-primer-plus/exercise/chapter-4/: 4-1.cpp  4-2.cpp  4-3.cpp  4-4.cpp
cpp-primer-plus/exercise/chapter-5/: 5-1.cpp  5-3.cpp
cpp-primer-plus/exercise/chapter-6/: 6-1.cpp  6-2.cpp
cpp-primer-plus/exercise/chapter-7/: 7-1.cpp  7-2.cpp  7-3.cpp
cpp-primer-plus/exercise/chapter-8/: 8-2.cpp  8-3.cpp
cpp-primer-plus/exercise/chapter-9/: 9-1.cpp  golf.cpp  golf.h
cpp-primer-plus/sample/appendix-E/: align.cpp  memb_pt.cpp
cpp-primer-plus/sample/chapter-10/: stack.cpp  stack.h  stacker.cpp  stock00.cpp  stock00.h  usestock0.cpp  usestock2.cpp
cpp-primer-plus/sample/chapter-11/: mytime0.cpp  mytime0.h  mytime1.cpp  mytime1.h  mytime2.cpp  mytime2.h  mytime3.cpp  mytime3.h  stone.cpp  stone1.cpp  stonewt.cpp  stonewt.h  stonewt1.cpp  stonewt1.h  usetime0.cpp  usetime1.cpp  usetime2.cpp  usetime3.cpp
cpp-primer-plus/sample/chapter-12/: placenew1.cpp  placenew2.cpp  string1.cpp  string1.h  stringbad.cpp  stringbad.h  vegnews.cpp
cpp-primer-plus/sample/chapter-13/: acctabc.cpp  acctabc.h  brass.cpp  brass.h  tabtenn0.cpp  tabtenn0.h  usebrass1.cpp  usebrass2.cpp  usebrass3.cpp  usett0.cpp  usett1.cpp
cpp-primer-plus/sample/chapter-14/: arraytp.h  frnd2tmp.cpp  manyfrnd.cpp  pairs.cpp  stacktem.cpp  stacktp.h  stcktp1.h  stkoptr1.cpp  student.cpp  studentc.h  studenti.cpp  studenti.h  tempemb.cpp  tempparm.cpp  tmp2tmp.cpp  twod.cpp  use_stuc.cpp  work0.h  worker0.cpp  workermi.cpp  workermi.h  workmi.cpp  worktest.cpp
cpp-primer-plus/sample/chapter-15/: constcast.cpp  error1.cpp  error2.cpp  error3.cpp  error4.cpp  error5.cpp  exc_mean.h  nested.cpp  newexcp.cpp  queuetp.h  rtti1.cpp  rtti2.cpp  sales.cpp  sales.h  tv.cpp  tv.h  tvfm.h  use_sales.cpp  use_tv.cpp
cpp-primer-plus/sample/chapter-16/: copyit.cpp  fowl.cpp  funadap.cpp  functor.cpp  hangman.cpp  ilist.cpp  inserts.cpp  list.cpp  listrmv.cpp  multimap.cpp  setops.cpp  smrtptrs.cpp  str1.cpp  str2.cpp  strfile.cpp  strgst1.cpp  usealgo.cpp  valvect.cpp  vect1.cpp  vect2.cpp  vect3.cpp  vslice.cpp
cpp-primer-plus/sample/chapter-17/: check_it.cpp  cinexcp.cpp  defaults.cpp  fill.cpp  get_gun.cpp  iomanip.cpp  manip.cpp  peeker.cpp  precise.cpp  setf.cpp  setf2.cpp  showpt.cpp  strln.cpp  strout.cpp  truncate.cpp  width.cpp  write.cpp
cpp-primer-plus/sample/chapter-18/: callable.cpp  lambda0.cpp  lambda1.cpp  lexcast.cpp  rvref.cpp  somedefs.h  stdmove.cpp  variadic1.cpp  variadic2.cpp  wrapped.cpp
cpp-primer-plus/sample/chapter-2/: carrot.cpp  convert.cpp  getinfo.cpp  myfirst.cpp  ourfunc.cpp  sqrt.cpp
cpp-primer-plus/sample/chapter-3/: arith.cpp  assign.cpp  bondini.cpp  chartype.cpp  divide.cpp  exceed.cpp  floatnum.cpp  fltadd.cpp  hexoct.cpp  hexoct2.cpp  limits.cpp  modulus.cpp  morechar.cpp  typecast.cpp
cpp-primer-plus/sample/chapter-4/: addpntrs.cpp  address.cpp  arraynew.cpp  arrayone.cpp  arrstruc.cpp  assgn_st.cpp  choices.cpp  delete.cpp  init_ptr.cpp  instr1.cpp  instr2.cpp  instr3.cpp  mixtypes.cpp  newstrct.cpp  numstr.cpp  pointer.cpp  ptrstr.cpp  string.cpp  strtype1.cpp  strtype2.cpp  strtype3.cpp  strtype4.cpp  structur.cpp  use_new.cpp
cpp-primer-plus/sample/chapter-5/: bigstep.cpp  block.cpp  compstr1.cpp  compstr2.cpp  dowhile.cpp  equal.cpp  express.cpp  forloop.cpp  formore.cpp  forstr1.cpp  forstr2.cpp  nested.cpp  num_test.cpp  plus_one.cpp  textin1.cpp  textin2.cpp  textin3.cpp  textin4.cpp  waiting.cpp  while.cpp
cpp-primer-plus/sample/chapter-6/: and.cpp  cctypes.cpp  cinfish.cpp  cingolf.cpp  condit.cpp  enum.cpp  friend_member.cpp  if.cpp  ifelse.cpp  ifelseif.cpp  jump.cpp  more_and.cpp  not.cpp  or.cpp  outfile.cpp  sumafile.cpp  switch.cpp
cpp-primer-plus/sample/chapter-7/: arfupt.cpp  arrfun1.cpp  arrfun2.cpp  arrfun4.cpp  arrobj.cpp  atrctfun.cpp  calling.cpp  fun_ptr.cpp  lotto.cpp  protos.cpp  recur.cpp  ruler.cpp  strctptr.cpp  strgback.cpp  strgfun.cpp  topfive.cpp  travel.cpp  twoarg.cpp
cpp-primer-plus/sample/chapter-8/: 8-choices.cpp  cubes.cpp  filefunc.cpp  firstref.cpp  funtemp.cpp  inline.cpp  left.cpp  sceref.cpp  strquote.cpp  strtref.cpp  swaps.cpp  temptempover.cpp  twoswap.cpp  (+1 more)
cpp-templates/basics/: actualparameter.cpp  addval.hpp  addvaltest.cpp  classinfunction.cpp  clzdecorate.h  defaultparameter.h  dumpcode.cpp  friendclztemplate.cpp  is_default_constructible.cpp  link.h  max.cpp  max.hpp  max1.cpp  max1.hpp  max22.cpp  max3.cpp  max3a.cpp  max6.cpp  maxdecltype.hpp  maxdefault4.hpp  myfirst3.cpp  myfirstinst.cpp  printcoll.hpp  specialization.h  stack1test.cpp  stack1test1.cpp  stack2.hpp  stack33test.cpp  stack5decl.hpp  stack6decl.hpp  stack7decl.hpp  stack7test.cpp  stack8.hpp  stack8test.cpp  stackpartspec.hpp  thispointer.cpp  virtual.h
cpp-templates/details/: adl.cpp  cpp-template-details-explicit-specialization.cpp  cpp-template-details-func-overload-partial-order.cpp  deduction-context.cpp  dependent-base-class.cpp  funcoverload.hpp  function-template-poi.cpp  future-direction.cpp  inject.cpp  lazy.cpp  non-dependent-base-class.cpp  override.cpp  template-disambiguator.cpp
cpp-templates/exprtmpl/: exprscalar.hpp  sarrayops1.hpp
cpp-templates/inherit/: virtual.cpp
cpp-templates/meta/: pow3.hpp  unruh.cpp
cpp-templates/pointers/: holder.hpp
cpp-templates/poly/: dynapoly.cpp  staticpoly.cpp
cpp-templates/traits/: accum1.cpp  accumtraits2.hpp  apply1.cpp  csm1.hpp  csmtraits.hpp  promote1.hpp  promote2.hpp  promote3.hpp  promote4.hpp  promotearray.hpp  rparam1.cpp  sizeof.cpp  typeop2.hpp  typeop3.hpp  typeop4.hpp
cpp-templates/tuples/: duo3.hpp
cpp-templates/types/: type2.hpp  type3.hpp  type4.hpp  type5.hpp  type6.hpp
cppreference/data/: scores_copy.txt
random/: return_obj.cpp
(+235 files in other folders)
