cmake_minimum_required(VERSION 3.25)
project(cpp_demo)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_demo main.cpp)

add_executable(myfirst cpp-primer-plus/sample/chapter-2/myfirst.cpp)
add_executable(carrot cpp-primer-plus/sample/chapter-2/carrot.cpp)
add_executable(getinfo cpp-primer-plus/sample/chapter-2/getinfo.cpp)
add_executable(sqrt cpp-primer-plus/sample/chapter-2/sqrt.cpp)
add_executable(ourfunc cpp-primer-plus/sample/chapter-2/ourfunc.cpp)
add_executable(convert cpp-primer-plus/sample/chapter-2/convert.cpp)
add_executable(1 cpp-primer-plus/exercise/chapter-2/1.cpp)
add_executable(2 cpp-primer-plus/exercise/chapter-2/2.cpp)
add_executable(3 cpp-primer-plus/exercise/chapter-2/3.cpp)
add_executable(limits cpp-primer-plus/sample/chapter-3/limits.cpp)
add_executable(exceed cpp-primer-plus/sample/chapter-3/exceed.cpp)
add_executable(hexoct cpp-primer-plus/sample/chapter-3/hexoct.cpp)
add_executable(hexoct2 cpp-primer-plus/sample/chapter-3/hexoct2.cpp)
add_executable(chartype cpp-primer-plus/sample/chapter-3/chartype.cpp)
add_executable(morechar cpp-primer-plus/sample/chapter-3/morechar.cpp)
add_executable(bondini cpp-primer-plus/sample/chapter-3/bondini.cpp)
add_executable(floatnum cpp-primer-plus/sample/chapter-3/floatnum.cpp)
add_executable(fltadd cpp-primer-plus/sample/chapter-3/fltadd.cpp)
add_executable(arith cpp-primer-plus/sample/chapter-3/arith.cpp)
add_executable(divide cpp-primer-plus/sample/chapter-3/divide.cpp)
add_executable(modulus cpp-primer-plus/sample/chapter-3/modulus.cpp)
add_executable(assign cpp-primer-plus/sample/chapter-3/assign.cpp)
add_executable(typecast cpp-primer-plus/sample/chapter-3/typecast.cpp)
add_executable(3-1 cpp-primer-plus/exercise/chapter-3/3-1.cpp)
add_executable(arrayone cpp-primer-plus/sample/chapter-4/arrayone.cpp)
add_executable(string cpp-primer-plus/sample/chapter-4/string.cpp)
add_executable(instr1 cpp-primer-plus/sample/chapter-4/instr1.cpp)
add_executable(instr2 cpp-primer-plus/sample/chapter-4/instr2.cpp)
add_executable(instr3 cpp-primer-plus/sample/chapter-4/instr3.cpp)
add_executable(numstr cpp-primer-plus/sample/chapter-4/numstr.cpp)
add_executable(strtype1 cpp-primer-plus/sample/chapter-4/strtype1.cpp)
add_executable(strtype2 cpp-primer-plus/sample/chapter-4/strtype2.cpp)
add_executable(strtype3 cpp-primer-plus/sample/chapter-4/strtype3.cpp)
add_executable(strtype4 cpp-primer-plus/sample/chapter-4/strtype4.cpp)
add_executable(structur cpp-primer-plus/sample/chapter-4/structur.cpp)
add_executable(assgn_st cpp-primer-plus/sample/chapter-4/assgn_st.cpp)
add_executable(arrstruc cpp-primer-plus/sample/chapter-4/arrstruc.cpp)
add_executable(address cpp-primer-plus/sample/chapter-4/address.cpp)
add_executable(pointer cpp-primer-plus/sample/chapter-4/pointer.cpp)
add_executable(init_ptr cpp-primer-plus/sample/chapter-4/init_ptr.cpp)
add_executable(use_new cpp-primer-plus/sample/chapter-4/use_new.cpp)
add_executable(arraynew cpp-primer-plus/sample/chapter-4/arraynew.cpp)
add_executable(addpntrs cpp-primer-plus/sample/chapter-4/addpntrs.cpp)
add_executable(ptrstr cpp-primer-plus/sample/chapter-4/ptrstr.cpp)
add_executable(newstrct cpp-primer-plus/sample/chapter-4/newstrct.cpp)
add_executable(delete cpp-primer-plus/sample/chapter-4/delete.cpp)
add_executable(mixtypes cpp-primer-plus/sample/chapter-4/mixtypes.cpp)
add_executable(choices cpp-primer-plus/sample/chapter-4/choices.cpp)
add_executable(4-1 cpp-primer-plus/exercise/chapter-4/4-1.cpp)
add_executable(4-2 cpp-primer-plus/exercise/chapter-4/4-2.cpp)
add_executable(4-3 cpp-primer-plus/exercise/chapter-4/4-3.cpp)
add_executable(4-4 cpp-primer-plus/exercise/chapter-4/4-4.cpp)