cmake_minimum_required(VERSION 3.25)
project(cpp_demo)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_demo main.cpp)

add_executable(myfirst cpp-primer-plus/sample/chapter-2/myfirst.cpp)
add_executable(carrot cpp-primer-plus/sample/chapter-2/carrot.cpp)
add_executable(getinfo cpp-primer-plus/sample/chapter-2/getinfo.cpp)
add_executable(sqrt cpp-primer-plus/sample/chapter-2/sqrt.cpp)
add_executable(ourfunc cpp-primer-plus/sample/chapter-2/ourfunc.cpp)
add_executable(convert cpp-primer-plus/sample/chapter-2/convert.cpp)
add_executable(1 cpp-primer-plus/exercise/chapter-2/1.cpp)
add_executable(2 cpp-primer-plus/exercise/chapter-2/2.cpp)
add_executable(3 cpp-primer-plus/exercise/chapter-2/3.cpp)
add_executable(limits cpp-primer-plus/sample/chapter-3/limits.cpp)
add_executable(exceed cpp-primer-plus/sample/chapter-3/exceed.cpp)
add_executable(hexoct cpp-primer-plus/sample/chapter-3/hexoct.cpp)
add_executable(hexoct2 cpp-primer-plus/sample/chapter-3/hexoct2.cpp)
add_executable(chartype cpp-primer-plus/sample/chapter-3/chartype.cpp)
add_executable(morechar cpp-primer-plus/sample/chapter-3/morechar.cpp)
add_executable(bondini cpp-primer-plus/sample/chapter-3/bondini.cpp)
add_executable(floatnum cpp-primer-plus/sample/chapter-3/floatnum.cpp)
add_executable(fltadd cpp-primer-plus/sample/chapter-3/fltadd.cpp)
add_executable(arith cpp-primer-plus/sample/chapter-3/arith.cpp)
add_executable(divide cpp-primer-plus/sample/chapter-3/divide.cpp)
add_executable(modulus cpp-primer-plus/sample/chapter-3/modulus.cpp)
add_executable(assign cpp-primer-plus/sample/chapter-3/assign.cpp)
add_executable(typecast cpp-primer-plus/sample/chapter-3/typecast.cpp)
add_executable(3-1 cpp-primer-plus/exercise/chapter-3/3-1.cpp)
add_executable(arrayone cpp-primer-plus/sample/chapter-4/arrayone.cpp)
add_executable(string cpp-primer-plus/sample/chapter-4/string.cpp)
add_executable(instr1 cpp-primer-plus/sample/chapter-4/instr1.cpp)
add_executable(instr2 cpp-primer-plus/sample/chapter-4/instr2.cpp)
add_executable(instr3 cpp-primer-plus/sample/chapter-4/instr3.cpp)
add_executable(numstr cpp-primer-plus/sample/chapter-4/numstr.cpp)
add_executable(strtype1 cpp-primer-plus/sample/chapter-4/strtype1.cpp)
add_executable(strtype2 cpp-primer-plus/sample/chapter-4/strtype2.cpp)
add_executable(strtype3 cpp-primer-plus/sample/chapter-4/strtype3.cpp)
add_executable(strtype4 cpp-primer-plus/sample/chapter-4/strtype4.cpp)
add_executable(structur cpp-primer-plus/sample/chapter-4/structur.cpp)
add_executable(assgn_st cpp-primer-plus/sample/chapter-4/assgn_st.cpp)
add_executable(arrstruc cpp-primer-plus/sample/chapter-4/arrstruc.cpp)
add_executable(address cpp-primer-plus/sample/chapter-4/address.cpp)
add_executable(pointer cpp-primer-plus/sample/chapter-4/pointer.cpp)
add_executable(init_ptr cpp-primer-plus/sample/chapter-4/init_ptr.cpp)
add_executable(use_new cpp-primer-plus/sample/chapter-4/use_new.cpp)
add_executable(arraynew cpp-primer-plus/sample/chapter-4/arraynew.cpp)
add_executable(addpntrs cpp-primer-plus/sample/chapter-4/addpntrs.cpp)
add_executable(ptrstr cpp-primer-plus/sample/chapter-4/ptrstr.cpp)
add_executable(newstrct cpp-primer-plus/sample/chapter-4/newstrct.cpp)
add_executable(delete cpp-primer-plus/sample/chapter-4/delete.cpp)
add_executable(mixtypes cpp-primer-plus/sample/chapter-4/mixtypes.cpp)
add_executable(choices cpp-primer-plus/sample/chapter-4/choices.cpp)
add_executable(4-1 cpp-primer-plus/exercise/chapter-4/4-1.cpp)
add_executable(4-2 cpp-primer-plus/exercise/chapter-4/4-2.cpp)
add_executable(4-3 cpp-primer-plus/exercise/chapter-4/4-3.cpp)
add_executable(4-4 cpp-primer-plus/exercise/chapter-4/4-4.cpp)
add_executable(forloop cpp-primer-plus/sample/chapter-5/forloop.cpp)
add_executable(num_test cpp-primer-plus/sample/chapter-5/num_test.cpp)
add_executable(express cpp-primer-plus/sample/chapter-5/express.cpp)
add_executable(formore cpp-primer-plus/sample/chapter-5/formore.cpp)
add_executable(bigstep cpp-primer-plus/sample/chapter-5/bigstep.cpp)
add_executable(forstr1 cpp-primer-plus/sample/chapter-5/forstr1.cpp)
add_executable(plus_one cpp-primer-plus/sample/chapter-5/plus_one.cpp)
add_executable(block cpp-primer-plus/sample/chapter-5/block.cpp)
add_executable(forstr2 cpp-primer-plus/sample/chapter-5/forstr2.cpp)
add_executable(equal cpp-primer-plus/sample/chapter-5/equal.cpp)
add_executable(compstr1 cpp-primer-plus/sample/chapter-5/compstr1.cpp)
add_executable(compstr2 cpp-primer-plus/sample/chapter-5/compstr2.cpp)
add_executable(while cpp-primer-plus/sample/chapter-5/while.cpp)
add_executable(waiting cpp-primer-plus/sample/chapter-5/waiting.cpp)
add_executable(dowhile cpp-primer-plus/sample/chapter-5/dowhile.cpp)
add_executable(textin1 cpp-primer-plus/sample/chapter-5/textin1.cpp)
add_executable(textin2 cpp-primer-plus/sample/chapter-5/textin2.cpp)
add_executable(textin3 cpp-primer-plus/sample/chapter-5/textin3.cpp)
add_executable(textin4 cpp-primer-plus/sample/chapter-5/textin4.cpp)
add_executable(nested cpp-primer-plus/sample/chapter-5/nested.cpp)
add_executable(5-1 cpp-primer-plus/exercise/chapter-5/5-1.cpp)
add_executable(5-3 cpp-primer-plus/exercise/chapter-5/5-3.cpp)
add_executable(if cpp-primer-plus/sample/chapter-6/if.cpp)
add_executable(ifelse cpp-primer-plus/sample/chapter-6/ifelse.cpp)
add_executable(ifelseif cpp-primer-plus/sample/chapter-6/ifelseif.cpp)
add_executable(or cpp-primer-plus/sample/chapter-6/or.cpp)
add_executable(and cpp-primer-plus/sample/chapter-6/and.cpp)
add_executable(more_and cpp-primer-plus/sample/chapter-6/more_and.cpp)
add_executable(not cpp-primer-plus/sample/chapter-6/not.cpp)
add_executable(cctypes cpp-primer-plus/sample/chapter-6/cctypes.cpp)
add_executable(condit cpp-primer-plus/sample/chapter-6/condit.cpp)
add_executable(switch cpp-primer-plus/sample/chapter-6/switch.cpp)
add_executable(enum cpp-primer-plus/sample/chapter-6/enum.cpp)
add_executable(jump cpp-primer-plus/sample/chapter-6/jump.cpp)
add_executable(cinfish cpp-primer-plus/sample/chapter-6/cinfish.cpp)
add_executable(cingolf cpp-primer-plus/sample/chapter-6/cingolf.cpp)
add_executable(outfile cpp-primer-plus/sample/chapter-6/outfile.cpp)
add_executable(sumafile cpp-primer-plus/sample/chapter-6/sumafile.cpp)
add_executable(6-1 cpp-primer-plus/exercise/chapter-6/6-1.cpp)
add_executable(6-2 cpp-primer-plus/exercise/chapter-6/6-2.cpp)
add_executable(calling cpp-primer-plus/sample/chapter-7/calling.cpp)
add_executable(protos cpp-primer-plus/sample/chapter-7/protos.cpp)
add_executable(twoarg cpp-primer-plus/sample/chapter-7/twoarg.cpp)
add_executable(lotto cpp-primer-plus/sample/chapter-7/lotto.cpp)
add_executable(arrfun1 cpp-primer-plus/sample/chapter-7/arrfun1.cpp)
add_executable(arrfun2 cpp-primer-plus/sample/chapter-7/arrfun2.cpp)
add_executable(arrfun4 cpp-primer-plus/sample/chapter-7/arrfun4.cpp)
add_executable(strgfun cpp-primer-plus/sample/chapter-7/strgfun.cpp)
add_executable(strgback cpp-primer-plus/sample/chapter-7/strgback.cpp)
add_executable(travel cpp-primer-plus/sample/chapter-7/travel.cpp)
add_executable(atrctfun cpp-primer-plus/sample/chapter-7/atrctfun.cpp)
add_executable(strctptr cpp-primer-plus/sample/chapter-7/strctptr.cpp)
add_executable(topfive cpp-primer-plus/sample/chapter-7/topfive.cpp)
add_executable(arrobj cpp-primer-plus/sample/chapter-7/arrobj.cpp)
add_executable(recur cpp-primer-plus/sample/chapter-7/recur.cpp)
add_executable(ruler cpp-primer-plus/sample/chapter-7/ruler.cpp)
add_executable(fun_ptr cpp-primer-plus/sample/chapter-7/fun_ptr.cpp)
add_executable(arfupt cpp-primer-plus/sample/chapter-7/arfupt.cpp)
add_executable(7-1 cpp-primer-plus/exercise/chapter-7/7-1.cpp)
add_executable(7-2 cpp-primer-plus/exercise/chapter-7/7-2.cpp)
add_executable(7-3 cpp-primer-plus/exercise/chapter-7/7-3.cpp)
add_executable(inline cpp-primer-plus/sample/chapter-8/inline.cpp)
add_executable(firstref cpp-primer-plus/sample/chapter-8/firstref.cpp)
add_executable(sceref cpp-primer-plus/sample/chapter-8/sceref.cpp)
add_executable(swaps cpp-primer-plus/sample/chapter-8/swaps.cpp)
add_executable(cubes cpp-primer-plus/sample/chapter-8/cubes.cpp)
add_executable(strtref cpp-primer-plus/sample/chapter-8/strtref.cpp)