#cmake_minimum_required(VERSION 3.25)
cmake_minimum_required(VERSION 3.27)
project(cpp_demo)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_demo main.cpp)

add_executable(myfirst cpp-primer-plus/sample/chapter-2/myfirst.cpp)
add_executable(carrot cpp-primer-plus/sample/chapter-2/carrot.cpp)
add_executable(getinfo cpp-primer-plus/sample/chapter-2/getinfo.cpp)
add_executable(sqrt cpp-primer-plus/sample/chapter-2/sqrt.cpp)
add_executable(ourfunc cpp-primer-plus/sample/chapter-2/ourfunc.cpp)
add_executable(convert cpp-primer-plus/sample/chapter-2/convert.cpp)
add_executable(1 cpp-primer-plus/exercise/chapter-2/1.cpp)
add_executable(2 cpp-primer-plus/exercise/chapter-2/2.cpp)
add_executable(3 cpp-primer-plus/exercise/chapter-2/3.cpp)
add_executable(limits cpp-primer-plus/sample/chapter-3/limits.cpp)
add_executable(exceed cpp-primer-plus/sample/chapter-3/exceed.cpp)
add_executable(hexoct cpp-primer-plus/sample/chapter-3/hexoct.cpp)
add_executable(hexoct2 cpp-primer-plus/sample/chapter-3/hexoct2.cpp)
add_executable(chartype cpp-primer-plus/sample/chapter-3/chartype.cpp)
add_executable(morechar cpp-primer-plus/sample/chapter-3/morechar.cpp)
add_executable(bondini cpp-primer-plus/sample/chapter-3/bondini.cpp)
add_executable(floatnum cpp-primer-plus/sample/chapter-3/floatnum.cpp)
add_executable(fltadd cpp-primer-plus/sample/chapter-3/fltadd.cpp)
add_executable(arith cpp-primer-plus/sample/chapter-3/arith.cpp)
add_executable(divide cpp-primer-plus/sample/chapter-3/divide.cpp)
add_executable(modulus cpp-primer-plus/sample/chapter-3/modulus.cpp)
add_executable(assign cpp-primer-plus/sample/chapter-3/assign.cpp)
add_executable(typecast cpp-primer-plus/sample/chapter-3/typecast.cpp)
add_executable(3-1 cpp-primer-plus/exercise/chapter-3/3-1.cpp)
add_executable(arrayone cpp-primer-plus/sample/chapter-4/arrayone.cpp)
add_executable(string cpp-primer-plus/sample/chapter-4/string.cpp)
add_executable(instr1 cpp-primer-plus/sample/chapter-4/instr1.cpp)
add_executable(instr2 cpp-primer-plus/sample/chapter-4/instr2.cpp)
add_executable(instr3 cpp-primer-plus/sample/chapter-4/instr3.cpp)
add_executable(numstr cpp-primer-plus/sample/chapter-4/numstr.cpp)
add_executable(strtype1 cpp-primer-plus/sample/chapter-4/strtype1.cpp)
add_executable(strtype2 cpp-primer-plus/sample/chapter-4/strtype2.cpp)
add_executable(strtype3 cpp-primer-plus/sample/chapter-4/strtype3.cpp)
add_executable(strtype4 cpp-primer-plus/sample/chapter-4/strtype4.cpp)
add_executable(structur cpp-primer-plus/sample/chapter-4/structur.cpp)
add_executable(assgn_st cpp-primer-plus/sample/chapter-4/assgn_st.cpp)
add_executable(arrstruc cpp-primer-plus/sample/chapter-4/arrstruc.cpp)
add_executable(address cpp-primer-plus/sample/chapter-4/address.cpp)
add_executable(pointer cpp-primer-plus/sample/chapter-4/pointer.cpp)
add_executable(init_ptr cpp-primer-plus/sample/chapter-4/init_ptr.cpp)
add_executable(use_new cpp-primer-plus/sample/chapter-4/use_new.cpp)
add_executable(arraynew cpp-primer-plus/sample/chapter-4/arraynew.cpp)
add_executable(addpntrs cpp-primer-plus/sample/chapter-4/addpntrs.cpp)
add_executable(ptrstr cpp-primer-plus/sample/chapter-4/ptrstr.cpp)
add_executable(newstrct cpp-primer-plus/sample/chapter-4/newstrct.cpp)
add_executable(delete cpp-primer-plus/sample/chapter-4/delete.cpp)
add_executable(mixtypes cpp-primer-plus/sample/chapter-4/mixtypes.cpp)
add_executable(choices cpp-primer-plus/sample/chapter-4/choices.cpp)
add_executable(4-1 cpp-primer-plus/exercise/chapter-4/4-1.cpp)
add_executable(4-2 cpp-primer-plus/exercise/chapter-4/4-2.cpp)
add_executable(4-3 cpp-primer-plus/exercise/chapter-4/4-3.cpp)
add_executable(4-4 cpp-primer-plus/exercise/chapter-4/4-4.cpp)
add_executable(forloop cpp-primer-plus/sample/chapter-5/forloop.cpp)
add_executable(num_test cpp-primer-plus/sample/chapter-5/num_test.cpp)
add_executable(express cpp-primer-plus/sample/chapter-5/express.cpp)
add_executable(formore cpp-primer-plus/sample/chapter-5/formore.cpp)
add_executable(bigstep cpp-primer-plus/sample/chapter-5/bigstep.cpp)
add_executable(forstr1 cpp-primer-plus/sample/chapter-5/forstr1.cpp)
add_executable(plus_one cpp-primer-plus/sample/chapter-5/plus_one.cpp)
add_executable(block cpp-primer-plus/sample/chapter-5/block.cpp)
add_executable(forstr2 cpp-primer-plus/sample/chapter-5/forstr2.cpp)
add_executable(equal cpp-primer-plus/sample/chapter-5/equal.cpp)
add_executable(compstr1 cpp-primer-plus/sample/chapter-5/compstr1.cpp)
add_executable(compstr2 cpp-primer-plus/sample/chapter-5/compstr2.cpp)
add_executable(while cpp-primer-plus/sample/chapter-5/while.cpp)
add_executable(waiting cpp-primer-plus/sample/chapter-5/waiting.cpp)
add_executable(dowhile cpp-primer-plus/sample/chapter-5/dowhile.cpp)
add_executable(textin1 cpp-primer-plus/sample/chapter-5/textin1.cpp)
add_executable(textin2 cpp-primer-plus/sample/chapter-5/textin2.cpp)
add_executable(textin3 cpp-primer-plus/sample/chapter-5/textin3.cpp)
add_executable(textin4 cpp-primer-plus/sample/chapter-5/textin4.cpp)
add_executable(nested cpp-primer-plus/sample/chapter-5/nested.cpp)
add_executable(5-1 cpp-primer-plus/exercise/chapter-5/5-1.cpp)
add_executable(5-3 cpp-primer-plus/exercise/chapter-5/5-3.cpp)
add_executable(if cpp-primer-plus/sample/chapter-6/if.cpp)
add_executable(ifelse cpp-primer-plus/sample/chapter-6/ifelse.cpp)
add_executable(ifelseif cpp-primer-plus/sample/chapter-6/ifelseif.cpp)
add_executable(or cpp-primer-plus/sample/chapter-6/or.cpp)
add_executable(and cpp-primer-plus/sample/chapter-6/and.cpp)
add_executable(more_and cpp-primer-plus/sample/chapter-6/more_and.cpp)
add_executable(not cpp-primer-plus/sample/chapter-6/not.cpp)
add_executable(cctypes cpp-primer-plus/sample/chapter-6/cctypes.cpp)
add_executable(condit cpp-primer-plus/sample/chapter-6/condit.cpp)
add_executable(switch cpp-primer-plus/sample/chapter-6/switch.cpp)
add_executable(enum cpp-primer-plus/sample/chapter-6/enum.cpp)
add_executable(jump cpp-primer-plus/sample/chapter-6/jump.cpp)
add_executable(cinfish cpp-primer-plus/sample/chapter-6/cinfish.cpp)
add_executable(cingolf cpp-primer-plus/sample/chapter-6/cingolf.cpp)
add_executable(outfile cpp-primer-plus/sample/chapter-6/outfile.cpp)
add_executable(sumafile cpp-primer-plus/sample/chapter-6/sumafile.cpp)
add_executable(6-1 cpp-primer-plus/exercise/chapter-6/6-1.cpp)
add_executable(6-2 cpp-primer-plus/exercise/chapter-6/6-2.cpp)
add_executable(calling cpp-primer-plus/sample/chapter-7/calling.cpp)
add_executable(protos cpp-primer-plus/sample/chapter-7/protos.cpp)
add_executable(twoarg cpp-primer-plus/sample/chapter-7/twoarg.cpp)
add_executable(lotto cpp-primer-plus/sample/chapter-7/lotto.cpp)
add_executable(arrfun1 cpp-primer-plus/sample/chapter-7/arrfun1.cpp)
add_executable(arrfun2 cpp-primer-plus/sample/chapter-7/arrfun2.cpp)
add_executable(arrfun4 cpp-primer-plus/sample/chapter-7/arrfun4.cpp)
add_executable(strgfun cpp-primer-plus/sample/chapter-7/strgfun.cpp)
add_executable(strgback cpp-primer-plus/sample/chapter-7/strgback.cpp)
add_executable(travel cpp-primer-plus/sample/chapter-7/travel.cpp)
add_executable(atrctfun cpp-primer-plus/sample/chapter-7/atrctfun.cpp)
add_executable(strctptr cpp-primer-plus/sample/chapter-7/strctptr.cpp)
add_executable(topfive cpp-primer-plus/sample/chapter-7/topfive.cpp)
add_executable(arrobj cpp-primer-plus/sample/chapter-7/arrobj.cpp)
add_executable(recur cpp-primer-plus/sample/chapter-7/recur.cpp)
add_executable(ruler cpp-primer-plus/sample/chapter-7/ruler.cpp)
add_executable(fun_ptr cpp-primer-plus/sample/chapter-7/fun_ptr.cpp)
add_executable(arfupt cpp-primer-plus/sample/chapter-7/arfupt.cpp)
add_executable(7-1 cpp-primer-plus/exercise/chapter-7/7-1.cpp)
add_executable(7-2 cpp-primer-plus/exercise/chapter-7/7-2.cpp)
add_executable(7-3 cpp-primer-plus/exercise/chapter-7/7-3.cpp)
add_executable(inline cpp-primer-plus/sample/chapter-8/inline.cpp)
add_executable(firstref cpp-primer-plus/sample/chapter-8/firstref.cpp)
add_executable(sceref cpp-primer-plus/sample/chapter-8/sceref.cpp)
add_executable(swaps cpp-primer-plus/sample/chapter-8/swaps.cpp)
add_executable(cubes cpp-primer-plus/sample/chapter-8/cubes.cpp)
add_executable(strtref cpp-primer-plus/sample/chapter-8/strtref.cpp)
add_executable(strquote cpp-primer-plus/sample/chapter-8/strquote.cpp)
add_executable(filefunc cpp-primer-plus/sample/chapter-8/filefunc.cpp)
add_executable(left cpp-primer-plus/sample/chapter-8/left.cpp)
add_executable(funtemp cpp-primer-plus/sample/chapter-8/funtemp.cpp)
add_executable(twotemps cpp-primer-plus/sample/chapter-8/twotemps.cpp)
add_executable(twoswap cpp-primer-plus/sample/chapter-8/twoswap.cpp)
add_executable(temptempover cpp-primer-plus/sample/chapter-8/temptempover.cpp)
add_executable(8-choices cpp-primer-plus/sample/chapter-8/8-choices.cpp)
add_executable(8-1 cpp-primer-plus/exercise/chapter-8/8-2.cpp)
add_executable(8-3 cpp-primer-plus/exercise/chapter-8/8-3.cpp)
add_executable(file1 cpp-primer-plus/sample/chapter-9/file1.cpp cpp-primer-plus/sample/chapter-9/file2.cpp)
add_executable(auto cpp-primer-plus/sample/chapter-9/auto.cpp)
add_executable(external cpp-primer-plus/sample/chapter-9/external.cpp cpp-primer-plus/sample/chapter-9/support.cpp)
add_executable(twofile1 cpp-primer-plus/sample/chapter-9/twofile1.cpp cpp-primer-plus/sample/chapter-9/twofile2.cpp)
add_executable(static cpp-primer-plus/sample/chapter-9/static.cpp)
add_executable(newplace cpp-primer-plus/sample/chapter-9/newplace.cpp)
add_executable(namessp cpp-primer-plus/sample/chapter-9/namessp.cpp cpp-primer-plus/sample/chapter-9/namesp.cpp)
add_executable(9-1 cpp-primer-plus/exercise/chapter-9/9-1.cpp cpp-primer-plus/exercise/chapter-9/golf.cpp)
add_executable(usestock0 cpp-primer-plus/sample/chapter-10/usestock0.cpp cpp-primer-plus/sample/chapter-10/stock00.cpp)
add_executable(usestock2 cpp-primer-plus/sample/chapter-10/usestock2.cpp cpp-primer-plus/sample/chapter-10/stock00.cpp)
add_executable(stacker cpp-primer-plus/sample/chapter-10/stacker.cpp cpp-primer-plus/sample/chapter-10/stack.cpp)
add_executable(10-1 cpp-primer-plus/exercise/chapter-10/10-1.cpp cpp-primer-plus/exercise/chapter-10/BankAccount.cpp)
add_executable(usetime0 cpp-primer-plus/sample/chapter-11/usetime0.cpp cpp-primer-plus/sample/chapter-11/mytime0.cpp)
add_executable(usetime1 cpp-primer-plus/sample/chapter-11/usetime1.cpp cpp-primer-plus/sample/chapter-11/mytime1.cpp)
add_executable(usetime2 cpp-primer-plus/sample/chapter-11/usetime2.cpp cpp-primer-plus/sample/chapter-11/mytime2.cpp)
add_executable(usetime3 cpp-primer-plus/sample/chapter-11/usetime3.cpp cpp-primer-plus/sample/chapter-11/mytime3.cpp)
add_executable(stone cpp-primer-plus/sample/chapter-11/stone.cpp cpp-primer-plus/sample/chapter-11/stonewt.cpp)
add_executable(stone1 cpp-primer-plus/sample/chapter-11/stone1.cpp cpp-primer-plus/sample/chapter-11/stonewt1.cpp)
add_executable(vegnews cpp-primer-plus/sample/chapter-12/vegnews.cpp cpp-primer-plus/sample/chapter-12/stringbad.cpp)
add_executable(placenew1 cpp-primer-plus/sample/chapter-12/placenew1.cpp)
add_executable(placenew2 cpp-primer-plus/sample/chapter-12/placenew2.cpp)
add_executable(12-1 cpp-primer-plus/exercise/chapter-12/12-1.cpp cpp-primer-plus/exercise/chapter-12/Cow.cpp)
add_executable(usett0 cpp-primer-plus/sample/chapter-13/tabtenn0.cpp  cpp-primer-plus/sample/chapter-13/usett0.cpp)
add_executable(usett1 cpp-primer-plus/sample/chapter-13/tabtenn0.cpp  cpp-primer-plus/sample/chapter-13/usett1.cpp)
add_executable(usebrass1 cpp-primer-plus/sample/chapter-13/brass.cpp  cpp-primer-plus/sample/chapter-13/usebrass1.cpp)
add_executable(usebrass2 cpp-primer-plus/sample/chapter-13/brass.cpp  cpp-primer-plus/sample/chapter-13/usebrass2.cpp)
add_executable(usebrass3 cpp-primer-plus/sample/chapter-13/acctabc.cpp  cpp-primer-plus/sample/chapter-13/usebrass3.cpp)
add_executable(use_stuc cpp-primer-plus/sample/chapter-14/student.cpp  cpp-primer-plus/sample/chapter-14/use_stuc.cpp)
add_executable(use_stuci cpp-primer-plus/sample/chapter-14/studenti.cpp  cpp-primer-plus/sample/chapter-14/use_stuc.cpp)
add_executable(worktest cpp-primer-plus/sample/chapter-14/worker0.cpp  cpp-primer-plus/sample/chapter-14/worktest.cpp)
add_executable(workmi cpp-primer-plus/sample/chapter-14/workermi.cpp  cpp-primer-plus/sample/chapter-14/workmi.cpp)
add_executable(stackem  cpp-primer-plus/sample/chapter-14/stacktem.cpp)
add_executable(stkoptr1  cpp-primer-plus/sample/chapter-14/stkoptr1.cpp)
add_executable(twod  cpp-primer-plus/sample/chapter-14/twod.cpp)
add_executable(pairs  cpp-primer-plus/sample/chapter-14/pairs.cpp)
add_executable(tempemb  cpp-primer-plus/sample/chapter-14/tempemb.cpp)
add_executable(tempparm  cpp-primer-plus/sample/chapter-14/tempparm.cpp)
add_executable(frnd2tmp  cpp-primer-plus/sample/chapter-14/frnd2tmp.cpp)
add_executable(tmp2tmp  cpp-primer-plus/sample/chapter-14/tmp2tmp.cpp)
add_executable(manyfrnd cpp-primer-plus/sample/chapter-14/manyfrnd.cpp)
add_executable(use_tv cpp-primer-plus/sample/chapter-15/use_tv.cpp cpp-primer-plus/sample/chapter-15/tv.cpp)
add_executable(nested15 cpp-primer-plus/sample/chapter-15/nested.cpp)
add_executable(error1 cpp-primer-plus/sample/chapter-15/error1.cpp)
add_executable(error3 cpp-primer-plus/sample/chapter-15/error3.cpp)
add_executable(error4 cpp-primer-plus/sample/chapter-15/error4.cpp)
add_executable(error5 cpp-primer-plus/sample/chapter-15/error5.cpp)
add_executable(newexcp cpp-primer-plus/sample/chapter-15/newexcp.cpp)
add_executable(use_sales cpp-primer-plus/sample/chapter-15/use_sales.cpp cpp-primer-plus/sample/chapter-15/sales.cpp)
add_executable(rtti1 cpp-primer-plus/sample/chapter-15/rtti1.cpp)
add_executable(rtti2 cpp-primer-plus/sample/chapter-15/rtti2.cpp)
add_executable(constcast cpp-primer-plus/sample/chapter-15/constcast.cpp)
add_executable(str1 cpp-primer-plus/sample/chapter-16/str1.cpp)
add_executable(strfile cpp-primer-plus/sample/chapter-16/strfile.cpp)
add_executable(hangman cpp-primer-plus/sample/chapter-16/hangman.cpp)
add_executable(str2 cpp-primer-plus/sample/chapter-16/str2.cpp)
add_executable(smrtptrs cpp-primer-plus/sample/chapter-16/smrtptrs.cpp)
add_executable(fowl cpp-primer-plus/sample/chapter-16/fowl.cpp)
add_executable(vect1 cpp-primer-plus/sample/chapter-16/vect1.cpp)
add_executable(vect2 cpp-primer-plus/sample/chapter-16/vect2.cpp)
add_executable(vect3 cpp-primer-plus/sample/chapter-16/vect3.cpp)
add_executable(copyit cpp-primer-plus/sample/chapter-16/copyit.cpp)
add_executable(inserts cpp-primer-plus/sample/chapter-16/inserts.cpp)
add_executable(list cpp-primer-plus/sample/chapter-16/list.cpp)
add_executable(setops cpp-primer-plus/sample/chapter-16/setops.cpp)
add_executable(multimap cpp-primer-plus/sample/chapter-16/multimap.cpp)
add_executable(functor cpp-primer-plus/sample/chapter-16/functor.cpp)
add_executable(funadap cpp-primer-plus/sample/chapter-16/funadap.cpp)
add_executable(strgst1 cpp-primer-plus/sample/chapter-16/strgst1.cpp)
add_executable(listrmv cpp-primer-plus/sample/chapter-16/listrmv.cpp)
add_executable(usealgo cpp-primer-plus/sample/chapter-16/usealgo.cpp)
add_executable(valvect cpp-primer-plus/sample/chapter-16/valvect.cpp)
add_executable(vslice cpp-primer-plus/sample/chapter-16/vslice.cpp)
add_executable(ilist cpp-primer-plus/sample/chapter-16/ilist.cpp)
add_executable(write cpp-primer-plus/sample/chapter-17/write.cpp)
add_executable(defaults cpp-primer-plus/sample/chapter-17/defaults.cpp)
add_executable(manip cpp-primer-plus/sample/chapter-17/manip.cpp)
add_executable(width cpp-primer-plus/sample/chapter-17/width.cpp)
add_executable(fill cpp-primer-plus/sample/chapter-17/fill.cpp)
add_executable(precise cpp-primer-plus/sample/chapter-17/precise.cpp)
add_executable(showpt cpp-primer-plus/sample/chapter-17/showpt.cpp)
add_executable(setf cpp-primer-plus/sample/chapter-17/setf.cpp)
add_executable(setf2 cpp-primer-plus/sample/chapter-17/setf2.cpp)
add_executable(iomanip cpp-primer-plus/sample/chapter-17/iomanip.cpp)
add_executable(check_it cpp-primer-plus/sample/chapter-17/check_it.cpp)
add_executable(cinexcp cpp-primer-plus/sample/chapter-17/cinexcp.cpp)
add_executable(get_gun cpp-primer-plus/sample/chapter-17/get_gun.cpp)
add_executable(peeker cpp-primer-plus/sample/chapter-17/peeker.cpp)
add_executable(truncate cpp-primer-plus/sample/chapter-17/truncate.cpp)
add_executable(strout cpp-primer-plus/sample/chapter-17/strout.cpp)
add_executable(strln cpp-primer-plus/sample/chapter-17/strln.cpp)
add_executable(rvref cpp-primer-plus/sample/chapter-18/rvref.cpp)
add_executable(stdmove cpp-primer-plus/sample/chapter-18/stdmove.cpp)
add_executable(lambda0 cpp-primer-plus/sample/chapter-18/lambda0.cpp)
add_executable(lambda1 cpp-primer-plus/sample/chapter-18/lambda1.cpp)
add_executable(callable cpp-primer-plus/sample/chapter-18/callable.cpp)
add_executable(wrapped cpp-primer-plus/sample/chapter-18/wrapped.cpp)
add_executable(variadic1 cpp-primer-plus/sample/chapter-18/variadic1.cpp)
add_executable(variadic2 cpp-primer-plus/sample/chapter-18/variadic2.cpp)

# use MinGW instead of Cygwin
# or install boost through Cygwin
find_package(Boost CONFIG REQUIRED)
if (NOT Boost_FOUND)
    message(FATAL_ERROR "Boost library not found")
endif ()
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
message("Boost version " ${Boost_VERSION})
message(${Boost_INCLUDE_DIRS})
add_executable(lexcast cpp-primer-plus/sample/chapter-18/lexcast.cpp)
#target_include_directories(lexcast PRIVATE ${Boost_INCLUDE_DIRS})
add_executable(memb_pt cpp-primer-plus/sample/appendix-E/memb_pt.cpp)
add_executable(align cpp-primer-plus/sample/appendix-E/align.cpp)
add_executable(max cpp-templates/basics/max.cpp)
add_executable(max2 cpp-templates/basics/max2.cpp)
add_executable(max3 cpp-templates/basics/max3.cpp)
add_executable(max3a cpp-templates/basics/max3a.cpp)
add_executable(stack1test cpp-templates/basics/stack1test.cpp)
add_executable(stack3test cpp-templates/basics/stack3test.cpp)
add_executable(stack4test cpp-templates/basics/stack4test.cpp)
add_executable(addvaltest cpp-templates/basics/addvaltest.cpp)
add_executable(printcolltest cpp-templates/basics/printcolltest.cpp)
#add_executable(thispointer cpp-templates/basics/thispointer.cpp)
add_executable(stack7test cpp-templates/basics/stack7test.cpp)
add_executable(stack8test cpp-templates/basics/stack8test.cpp)
add_executable(max5 cpp-templates/basics/max5.cpp)
add_executable(max6 cpp-templates/basics/max6.cpp)
add_executable(refnonref cpp-templates/basics/refnonref.cpp)
add_executable(myfirstmain cpp-templates/basics/myfirstinst.cpp cpp-templates/basics/myfirstmain.cpp)
add_executable(myfirst2main cpp-templates/basics/myfirst2main.cpp)
#add_executable(myfirst3main cpp-templates/basics/myfirst3main.cpp)
add_executable(myfirst4main cpp-templates/basics/myfirst4main.cpp)
add_executable(dumpcode cpp-templates/basics/dumpcode.cpp)
add_executable(tracertest cpp-templates/basics/tracer.cpp cpp-templates/basics/tracertest.cpp)
add_executable(classinfunction cpp-templates/basics/classinfunction.cpp)
add_executable(detail_max cpp-templates/details/max.cpp)
add_executable(implicit cpp-templates/details/implicit.cpp)
add_executable(override cpp-templates/details/override.cpp)
add_executable(max1 cpp-templates/basics/max1.cpp)
add_executable(max22 cpp-templates/basics/max22.cpp)
add_executable(max3val cpp-templates/basics/max3val.cpp)
add_executable(max3ref cpp-templates/basics/max3ref.cpp)
add_executable(max44 cpp-templates/basics/max44.cpp)
add_executable(stack1test1 cpp-templates/basics/stack1test1.cpp)
add_executable(is_default_constructible cpp-templates/basics/is_default_constructible.cpp)
add_executable(stack33test cpp-templates/basics/stack33test.cpp)
add_executable(actualparameter cpp-templates/basics/actualparameter.cpp)
add_executable(friendclztemplate cpp-templates/basics/friendclztemplate.cpp)
add_executable(qnl1 cppreference/basic-concepts/qualified-name-lookup/qnl1.cpp)
add_executable(copy_file cppreference/io/cstdio/copy_file.cpp)
add_executable(copy_file1 cppreference/io/fstream/copy_file.cpp)
add_executable(copy_file2 cppreference/io/fstream/copy_file1.cpp)
add_executable(seekg_tellg cppreference/io/fstream/seekg_tellg.cpp)
add_executable(friend_member cpp-primer-plus/sample/chapter-6/friend_member.cpp)
add_executable(non-member-function-definition cppreference/basic-concepts/unqualified-name-lookup/non-member-function-definition.cpp)
add_executable(adl cpp-templates/details/adl.cpp)
add_executable(friend-function cppreference/functions/argument-dependent-lookup/friend-function.cpp)
add_executable(inject cpp-templates/details/inject.cpp)
add_executable(dependent-names-binding-rules cppreference/declarations/expressions/templates/dependent-names/binding-rules.cpp)
add_executable(typename-disambiguator cppreference/declarations/expressions/templates/dependent-names/typename-disambiguator.cpp)
add_executable(template-disambiguator cpp-templates/details/template-disambiguator.cpp)
add_executable(adl-e1 cppreference/functions/argument-dependent-lookup/e1.cpp)
add_executable(non-dependent-base-class cpp-templates/details/non-dependent-base-class.cpp)
add_executable(dependent-base-class cpp-templates/details/dependent-base-class.cpp)
add_executable(cpp-template-detail-lazy cpp-templates/details/lazy.cpp)
add_executable(function-template-poi cpp-templates/details/function-template-poi.cpp)
add_executable(cpp-template-detail-deduction-context cpp-templates/details/deduction-context.cpp)
add_executable(cpp-template-details-fppm cpp-templates/details/fppm.cpp)
add_executable(funcoverload cpp-templates/details/funcoverload.cpp)
add_executable(cpp-template-details-func-overload-partial-order cpp-templates/details/cpp-template-details-func-overload-partial-order.cpp)
add_executable(cpp-template-details-nontmpl cpp-templates/details/nontmpl.cpp)
add_executable(cpp-template-details-explicit-specialization cpp-templates/details/cpp-template-details-explicit-specialization.cpp)
add_executable(explicit-template-specialization-e1 cppreference/declarations/expressions/templates/explicit-template-specialization/e1.cpp)
add_executable(cpp-template-details-future-direction cpp-templates/details/future-direction.cpp)
add_executable(cpp-template-poly-dynapoly cpp-templates/poly/dynapoly.cpp)
add_executable(cpp-template-poly-staticpoly cpp-templates/poly/staticpoly.cpp)
add_executable(cpp-template-poly-printmax cpp-templates/poly/printmax.cpp)
add_executable(cpp-template-traits-accum1 cpp-templates/traits/accum1.cpp)
add_executable(cpp-template-traits-accum2 cpp-templates/traits/accum2.cpp)
